--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,9 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "main.py"
-    }
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/api/(.*)", "dest": "main.py" },
+    { "src": "/", "dest": "index.html" },
+    { "src": "/(.*)", "dest": "main.py" }
   ]
 }
