--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,13 @@
     }
   ],
   "routes": [
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/api/(.*)", "dest": "main.py" },
-    { "src": "/", "dest": "index.html" },
-    { "src": "/(.*)", "dest": "main.py" }
+    {
+      "src": "/api/(.*)",
+      "dest": "main.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
